--- a/src/styles/layout/Sidebar.scss
+++ b/src/styles/layout/Sidebar.scss
@@ -4,7 +4,7 @@
 
 .sidebar-component {
   float: left;
-  height: 100vh;
+  display: table-cell;
   width: $sidebarWidth;
   background-color: $c-secondary;
   font-size: 12px;
